--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./dashlite.css?ver=3.2.3">
+  <link id="skin-default" rel="stylesheet" href="./theme.css?ver=3.2.3">
 </head>
 <body>
   <app-root></app-root>
